SET(LIB_NAME   DriverDemo)

SET(HEADER_PATH include)
SET(SOURCE_PATH source)

INCLUDE_DIRECTORIES(${HEADER_PATH})

file(GLOB LIB_PUBLIC_HEADERS 
   "${HEADER_PATH}/*.h"
   )

file(GLOB LIB_SOURCES 
   "${SOURCE_PATH}/*.cpp"
   )

ADD_LIBRARY(${LIB_NAME} SHARED
    ${LIB_PUBLIC_HEADERS}
    ${LIB_SOURCES}
)

LINK_WITH_VARIABLES(${LIB_NAME}
   DTNETGM_LIBRARY
)

TARGET_LINK_LIBRARIES(${LIB_NAME} 
   ${SIMCORE_LIBRARY}
)

if (BUILD_HLA)
   ADD_DEFINITIONS(-DBUILD_HLA)
   TARGET_LINK_LIBRARIES(${LIB_NAME} 
      ${SIMCOREHLA_LIBRARY}
   )
   INCLUDE_DIRECTORIES(${RTI_INCLUDE_DIR})
endif (BUILD_HLA)


SET_TARGET_PROPERTIES(${LIB_NAME}
                     PROPERTIES DEFINE_SYMBOL DRIVER_DEMO_LIBRARY)

#little hack to get the .dll into /bin and .lib into /lib
IF (MSVC)
  SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES PREFIX "/../../bin/")
  SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES IMPORT_PREFIX "../")
ENDIF (MSVC)
