SET(LIB_NAME   Sphero)

SET(SOURCE_PATH ${CMAKE_SOURCE_DIR}/demos/${LIB_NAME}/source)

file(GLOB LIB_PUBLIC_HEADERS 
   "${SOURCE_PATH}/*.h"
   )

file(GLOB LIB_SOURCES 
   "${SOURCE_PATH}/*.cpp"
   )

ADD_LIBRARY(${LIB_NAME} SHARED                        
    ${LIB_PUBLIC_HEADERS}                         
    ${LIB_SOURCES}
)

LINK_WITH_VARIABLES(${LIB_NAME}
   SIMCORE_LIBRARY
   SIMCOREHLA_LIBRARY
)


SET_TARGET_PROPERTIES(${LIB_NAME}
                     PROPERTIES DEFINE_SYMBOL SPHERO_LIBRARY)

#little hack to get the .dll into /bin and .lib into /lib
IF (MSVC)
  SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES PREFIX "/../../bin/")
  SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES IMPORT_PREFIX "../")
ENDIF (MSVC)
